2014-04-09  Luigi Scarso  <luigi.scarso@gmail.com>

	* mingw32.h [MinGW64]: Avoid warning due to redefining popen.

2014-03-21  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am, configure.ac, getopt.h: Revert previous change.
	Cygwin system getopt() is incompatible with the GNU version.

2014-03-06  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am, configure.ac: Use Cygwin system getopt().
	* getopt.h: Avoid to redeclare the getopt API.

2014-02-08  TANAKA Takuji  <KXD02663@nifty.ne.jp>

	* knj.[ch]: Add a new function win32_putc().
	(Windows only)

2014-01-25  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* kpsewhich.c : [WIN32 only] progname should be kpse->program_name
	since progname can be NULL.

2014-01-25  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* knj.c: Drop unused variable (avoid warning).

2014-01-25  TANAKA Takuji  <KXD02663@nifty.ne.jp>

	* knj.[ch]: Add a new function win32_getc(), win32_ungetc(),
	win32_fputs(), and win32_puts(). (Windows only)
	* kpsewhich.c, pathsearch.c, line.c:
	Allow Unicode file name in kpsewhich. (Windows only)
	* knj.c: Fix typo in error message. (Windows only)

2014-01-14  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* knj.c: Add #include <wchar.h> as required for MinGW32.
	Cast arg3 of fsyscp_spawnvp() to avoid warning.

2014-01-14  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* knj.[ch]: Add new functions fsyscp_spawnvp(), and fsyscp_system().
	(Windows only)

2014-01-13  TANAKA Takuji  <KXD02663@nifty.ne.jp>

	* knj.[ch]: Add a new function fsyscp_popen(). (Windows only)

2014-01-08  TANAKA Takuji  <KXD02663@nifty.ne.jp>

	* knj.c: Allow encoding name "" for non-utf8 command line.
	Warn if unknown encoding. (Windows only)

2014-01-04  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* knj.c: Keep non-utf8 command line.  Avoid compiler warnings.

2014-01-01  TANAKA Takuji  <KXD02663@nifty.ne.jp>

	* knj.c, knj.h: Use cast for ASCII string conversion
	from char to wchar_t. (Windows only)
