@@ -1,6 +1,7 @@
 /* pathsearch.h: mostly-generic path searching.
 
-   Copyright 1993, 1994, 1996, 1997, 2007, 2008, 2009, 2011, 2012 Karl Berry.
+   Copyright 1993, 1994, 1996, 1997, 2007, 2008, 2009, 2011, 2012,
+   2014 Karl Berry.
    Copyright 1999-2005 Olaf Weber.
 
    This library is free software; you can redistribute it and/or
@@ -20,8 +21,14 @@
 #define KPATHSEA_PATHSEARCH_H
 
 #include <kpathsea/c-proto.h>
-#include <kpathsea/str-llist.h>
+
+/* Very sadly, types.h must be included before str-llist.h, because
+   types.h itself also includes str-llist.h, and its following use of
+   str_llist_type would not be defined if we have str-llist.h first
+   here.  All follows from types.h including nearly everything so that
+   MetaPost can be a threaded library.  */
 #include <kpathsea/types.h>
+#include <kpathsea/str-llist.h>
 
 #ifdef __cplusplus
 extern "C" {
